--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,27 @@
   --secondary-color: #757575;
   --text-hover: #2196f3;
   --frequent-white: #ffffff;
+  --primary-border-color: #eeeeee;
+  --secondary-border-color: #ececec;
 
   /* background colors */
   --bgc-button-hover: #2196f3;
   --bgc-dark-grey: #2f303a;
   --rare-bgc-color: #f5f4fa;
   --order-btn-hover: #188ce8;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -34,6 +49,51 @@ a {
 
 /* header */
 
+.container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
+.list {
+  display: flex;
+}
+
+.list .list-item {
+  margin-right: 50px;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.list .list-item:last-child {
+  margin-right: 0;
+}
+
+.top-header {
+  border: 1px solid var(--secondary-border-color);
+}
+
+.top-header .contacts {
+  display: flex;
+  margin-left: auto;
+}
+
+.contacts .contacts-item {
+  margin-right: 50px;
+}
+
+.contacts .contacts-item:last-child {
+  margin-right: 0;
+}
+
 .logo {
   color: var(--main-color);
   font-family: var(--secondary-font);
@@ -41,6 +101,7 @@ a {
   font-size: 26px;
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
+  margin-right: 93px;
 }
 
 .list-link {
@@ -77,6 +138,9 @@ a {
 
 .header-section {
   background-color: var(--bgc-dark-grey);
+  text-align: center;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .header {
@@ -84,9 +148,9 @@ a {
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-bottom: 30px;
 }
 
 .order-btn {
@@ -97,8 +161,8 @@ a {
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
-  display: flex;
   letter-spacing: 0.06em;
+  padding: 10px 32px;
 }
 
 .order-btn:hover,
@@ -122,11 +186,29 @@ a {
   margin: -1px;
 }
 
+.benefits-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.benefits-list {
+  display: flex;
+}
+
+.benefits-list .benefits-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.benefits-item {
+  width: 270px;
+}
+
 .benefits-header {
   color: var(--main-color);
   font-weight: 700;
   line-height: calc(16 / 14);
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .benefits-text {
@@ -138,29 +220,63 @@ a {
   background-color: var(--rare-bgc-color);
 }
 
+.description-section {
+  padding-bottom: 94px;
+}
+
 .description-header {
   color: var(--main-color);
   font-weight: 700;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
+  margin-bottom: 50px;
+}
+
+.descr-list {
+  display: flex;
+}
+
+.descr-list .descr-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.team-list {
+  display: flex;
+}
+
+.team-list .team-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-item {
+  background-color: var(--frequent-white);
+}
+
+.team-img {
+  margin-bottom: 30px;
 }
 
 .team-member {
   color: var(--main-color);
-  background-color: var(--frequent-white);
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .team-post {
   color: var(--secondary-color);
-  background-color: var(--frequent-white);
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
+  margin-bottom: 30px;
 }
 
 /*footer */
@@ -171,6 +287,13 @@ a {
 
 .page-bottom {
   background-color: var(--bgc-dark-grey);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.page-bottom .logo {
+  display: inline-block;
+  margin-bottom: 20px;
 }
 
 .white {
@@ -179,6 +302,10 @@ a {
 
 .blue {
   color: var(--text-hover);
+}
+
+.page-bottom .contacts-item {
+  margin-bottom: 9px;
 }
 
 .light-grey {
@@ -195,6 +322,21 @@ a {
 
 /*portfolio page only*/
 
+.main-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.btn-list {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.btn-list .btn-item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .btn {
   color: var(--main-color);
   background-color: var(--rare-bgc-color);
@@ -207,6 +349,7 @@ a {
   letter-spacing: 0.03em;
   border-radius: 4px;
   border: none;
+  padding: 6px 25px;
 }
 
 .btn:hover,
@@ -215,9 +358,30 @@ a {
   color: var(--frequent-white);
 }
 
+.examples {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.examples-item a {
+  display: inline-block;
+}
+
 .examples-img {
-  width: 370px;
-  height: 294px;
+  display: block;
+}
+
+.examples .examples-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.examples-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.examples-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .examples-header {
@@ -226,6 +390,7 @@ a {
   font-size: 18px;
   line-height: calc(36 / 18);
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 
 .examples-text {
@@ -233,4 +398,11 @@ a {
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.03em;
+}
+
+.examples-descr {
+  padding: 20px 24px;
+  border-right: 1px solid var(--primary-border-color);
+  border-bottom: 1px solid var(--primary-border-color);
+  border-left: 1px solid var(--primary-border-color);
 }
