--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,16 @@ a {
 .list .list-item {
   margin-right: 50px;
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .list .list-item:last-child {
   margin-right: 0;
+}
+
+.top-header .list-link {
+  display: inline-block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .top-header {
@@ -92,6 +96,12 @@ a {
 
 .contacts .contacts-item:last-child {
   margin-right: 0;
+}
+
+.top-header .contacts-link {
+  display: inline-block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .logo {
@@ -139,8 +149,8 @@ a {
 .header-section {
   background-color: var(--bgc-dark-grey);
   text-align: center;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 211px;
+  padding-bottom: 189px;
 }
 
 .header {
@@ -150,6 +160,9 @@ a {
   line-height: calc(60 / 44);
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
 }
 
@@ -162,7 +175,9 @@ a {
   font-size: 16px;
   line-height: calc(30 / 16);
   letter-spacing: 0.06em;
+  border-radius: 4px;
   padding: 10px 32px;
+  border: none;
 }
 
 .order-btn:hover,
@@ -206,6 +221,7 @@ a {
 .benefits-header {
   color: var(--main-color);
   font-weight: 700;
+  font-size: 14px;
   line-height: calc(16 / 14);
   text-transform: uppercase;
   margin-bottom: 10px;
@@ -259,7 +275,12 @@ a {
 }
 
 .team-img {
-  margin-bottom: 30px;
+  display: block;
+}
+
+.team-descr {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-member {
@@ -276,7 +297,6 @@ a {
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
-  margin-bottom: 30px;
 }
 
 /*footer */
@@ -294,6 +314,7 @@ a {
 .page-bottom .logo {
   display: inline-block;
   margin-bottom: 20px;
+  margin-right: 0;
 }
 
 .white {
@@ -305,6 +326,10 @@ a {
 }
 
 .page-bottom .contacts-item {
+  margin-right: 0px;
+}
+
+.page-bottom .contacts-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -356,6 +381,8 @@ a {
 .btn:focus {
   background-color: var(--bgc-button-hover);
   color: var(--frequent-white);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .examples {
@@ -371,17 +398,14 @@ a {
   display: block;
 }
 
+.examples {
+  margin-right: -30px;
+  margin-bottom: -30px;
+}
+
 .examples .examples-item {
   margin-right: 30px;
   margin-bottom: 30px;
-}
-
-.examples-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.examples-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
 }
 
 .examples-header {
